add picture folder

--- a/electon/index3.html
+++ b/electon/index3.html
@@ -11,33 +11,33 @@
         <!-- favicon -->
         <link rel="icon" type="image/x-icon" href="img/favicon/favicon8.png">
         <!-- bootstrap css -->
-        <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-        <link rel="stylesheet" type="text/css" href="css/bootstrap-icons.css">
+        <link rel="stylesheet" type="text/css" href="../src/main/webapp/css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="../src/main/webapp/css/bootstrap-icons.css">
         <!-- magnific-popup css -->
-        <link rel="stylesheet" type="text/css" href="css/magnific-popup.css">
+        <link rel="stylesheet" type="text/css" href="../src/main/webapp/css/magnific-popup.css">
         <!-- fontawesome css -->
-        <link rel="stylesheet" type="text/css" href="css/all.min.css">
+        <link rel="stylesheet" type="text/css" href="../src/main/webapp/css/all.min.css">
         <!--fether css -->
-        <link rel="stylesheet" type="text/css" href="css/feather.css">
+        <link rel="stylesheet" type="text/css" href="../src/main/webapp/css/feather.css">
         <!-- animate css -->
-        <link rel="stylesheet" type="text/css" href="css/animate.min.css">
+        <link rel="stylesheet" type="text/css" href="../src/main/webapp/css/animate.min.css">
         <!-- owl-carousel css -->
-        <link rel="stylesheet" type="text/css" href="css/owl.carousel.min.css">
-        <link rel="stylesheet" type="text/css" href="css/owl.theme.default.min.css">
+        <link rel="stylesheet" type="text/css" href="../src/main/webapp/css/owl.carousel.min.css">
+        <link rel="stylesheet" type="text/css" href="../src/main/webapp/css/owl.theme.default.min.css">
         <!-- swiper css -->
-        <link rel="stylesheet" type="text/css" href="css/swiper-bundle.min.css">
+        <link rel="stylesheet" type="text/css" href="../src/main/webapp/css/swiper-bundle.min.css">
         <!-- slick slider css -->
-        <link rel="stylesheet" type="text/css" href="css/slick.css">
+        <link rel="stylesheet" type="text/css" href="../src/main/webapp/css/slick.css">
         <!-- collection css -->
-        <link rel="stylesheet" type="text/css" href="css/collection.css">
+        <link rel="stylesheet" type="text/css" href="../src/main/webapp/css/collection.css">
         <!-- blog css -->
-        <link rel="stylesheet" type="text/css" href="css/blog.css">
+        <link rel="stylesheet" type="text/css" href="../src/main/webapp/css/blog.css">
         <!-- other-pages css -->
-        <link rel="stylesheet" type="text/css" href= "css/other-pages.css">
+        <link rel="stylesheet" type="text/css" href= "../src/main/webapp/css/other-pages.css">
         <!-- product-page css -->
-        <link rel="stylesheet" type="text/css" href="css/product-page.css">
+        <link rel="stylesheet" type="text/css" href="../src/main/webapp/css/product-page.css">
         <!-- style css -->
-        <link rel="stylesheet" type="text/css" href="css/style3.css">
+        <link rel="stylesheet" type="text/css" href="../src/main/webapp/css/style3.css">
     </head>
     <body>
         <!-- popup-wrapper start -->
