--- a/electon/coming-soon.html
+++ b/electon/coming-soon.html
@@ -9,7 +9,7 @@
         <!-- title -->
         <title>Electon - The Electronics eCommerce Bootstrap Template</title>
         <!-- favicon -->
-        <link rel="icon" type="image/x-icon" href="img/favicon/favicon.png">
+        <link rel="icon" type="image/x-icon" href="../src/main/webapp/img/favicon/favicon.png">
         <!-- bootstrap css -->
         <link rel="stylesheet" type="text/css" href="../src/main/webapp/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="../src/main/webapp/css/bootstrap-icons.css">
@@ -48,12 +48,12 @@
                         <div class="acc-form">
                             <div class="header-theme-logo">
                                 <a href="index.html" class="theme-logo" data-animate="animate__fadeInUp">
-                                    <img src="img/logo/logo.png" class="img-fluid" alt="logo">
+                                    <img src="../src/main/webapp/img/logo/logo.png" class="img-fluid" alt="logo">
                                 </a>
                             </div>
                             <div class="image">
                                 <a href="javascript:void(0)" class="about-image">
-                                    <img src="img/coming-soon/coming-soon.jpg" class="img-fluid" alt="coming-soon">
+                                    <img src="../src/main/webapp/img/coming-soon/coming-soon.jpg" class="img-fluid" alt="coming-soon">
                                 </a>
                             </div>
                             <h2 data-animate="animate__fadeInUp">Hello guys!</h2>
