upload js folder

--- a/electon/wishlist-empty.html
+++ b/electon/wishlist-empty.html
@@ -2797,23 +2797,23 @@
         </div>
         <!-- bottom-menu end -->
         <!-- jquery js -->
-        <script src="js/jquery-3.6.3.min.js"></script>
+        <script src="../src/main/webapp/js/jquery-3.6.3.min.js"></script>
         <!-- bootstrap js -->
-        <script src="js/popper.min.js"></script>
-        <script src="js/bootstrap.min.js"></script>
+        <script src="../src/main/webapp/js/popper.min.js"></script>
+        <script src="../src/main/webapp/js/bootstrap.min.js"></script>
         <!-- magnific-popup js -->
-        <script src="js/jquery.magnific-popup.min.js"></script>
+        <script src="../src/main/webapp/js/jquery.magnific-popup.min.js"></script>
         <!-- owl-carousel js -->
-        <script src="js/owl.carousel.min.js"></script>
+        <script src="../src/main/webapp/js/owl.carousel.min.js"></script>
         <!-- swiper-slider js -->
-        <script src="js/swiper-bundle.min.js"></script>
+        <script src="../src/main/webapp/js/swiper-bundle.min.js"></script>
         <!-- slick js -->
-        <script src="js/slick.min.js"></script>
+        <script src="../src/main/webapp/js/slick.min.js"></script>
         <!-- waypoints js -->
-        <script src="js/waypoints.min.js"></script>
+        <script src="../src/main/webapp/js/waypoints.min.js"></script>
         <!-- counter js -->
-        <script src="js/counter.js"></script>
+        <script src="../src/main/webapp/js/counter.js"></script>
         <!-- main js -->
-        <script src="js/main.js"></script>
+        <script src="../src/main/webapp/js/main.js"></script>
     </body>
 </html>
